golang_test/deployment-app1-golang.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-golang
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app1-golang
  template:
    metadata:
      labels:
        app: app1-golang
    spec:
      containers:
        - name: app1-golang
          image: registry.gitlab.com/itoutposts1/app1-golang:branch-dev-2023-11-09-10-08-56
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: gitlab-auth
