golang_test/service-app1-golang.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1golang-svc
spec:
  selector:
    app: app1-golang
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 30440
