golang_test/ingress-app1-golang.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1-golang-ingress
spec:
  ingressClassName: nginx
  rules:
   -  http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app1golang-svc
              port:
                number: 5000
